# LoRA-test-app

./: .gitignore  LICENSE  README.md
Training Data/: 1a34417u_1_0.txt  1a34421u_1_0.txt  SHORPY-01668a1.txt  SHORPY-16886a.txt  SHORPY-17152a.txt  SHORPY-1954-Ford-Mainline-two-door-sedan.txt  SHORPY-1963-Ford-Fairlane.txt  SHORPY-1a33845u.txt  SHORPY-1a34207u.txt  SHORPY-1a34415u2.txt  SHORPY-1a34419u2.txt  SHORPY-1a34425u2.txt  SHORPY-1a34780u2.txt  SHORPY-364-01.txt  SHORPY-40268a.txt  SHORPY-40300a.txt  SHORPY-5a50417a1.txt  SHORPY-IMGX002.txt  SHORPY-N4-043A.txt  SHORPY-P-00012.txt  SHORPY-P-0011.txt  SHORPY-P-0020.txt  SHORPY-P-0021.txt  SHORPY-P-0025.txt  SHORPY-P-0028.txt  SHORPY-P-0106.txt  SHORPY-P-0131.txt  SHORPY-P0150.txt  SHORPY_00264u.txt
space/: README.md  app.py  config.py  examples.py  inference.py  pyproject.toml  requirements.txt  ui.py
space/tests/: test_inference.py
